static/css/custom.css
@font-face {
  font-family: 'ImprintMT-Shadow';
  src: url('/static/fonts/ImprintMT-Shadow.eot?#iefix') format('embedded-opentype'),  
  url('/static/fonts/ImprintMT-Shadow.woff') format('woff'), 
  url('/static/fonts/ImprintMT-Shadow.ttf')  format('truetype'), 
  url('/static/fonts/ImprintMT-Shadow.svg#ImprintMT-Shadow') format('svg');
  font-weight: normal;
  font-style: normal;
}

body { 
	font-family: 'ImprintMT-Shadow';
}

#iaf-logo {
	width: 100%;
}

/* Start the vertical centering */
.site-wrapper-inner {
  /*vertical-align: middle;*/
  position: relative;
  top: 30%;
}

.navbar .navbar-nav{
	display: inline-block;
	float: none;
}

.navbar-default {
	
}

.navbar .navbar-collapse{
	text-align: center;
}

